[package]
name = "nvdown"
version = "0.1.0"
authors = ["PineAG <pein.agail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
select = '0.5.0'
regex = "1.5"
